$MODULE = "Tie::Cache"; $VERSION = .15; $DATE = 'TBA';

+ Better test.pl timing output, also differentiate between
  cache with MaxBytes setting and one with just MaxCount,
  as MaxBytes is a bit slower for data size calculations.

+ Better Tie::Cache options / object config error checking,
  die() on obvious misconfigurations that will get developers
  in trouble.

- MaxSize only set if MaxSize or MaxBytes are defined,
  was defaulting to 1 otherwise, killing basic MaxCount config.

+ Optimizations for common use where Tie::Cache is not 
  subclassed for write()/read() API

$MODULE = "Tie::Cache"; $VERSION = .11; $DATE = '03/18/2001';

+ use of arrays for internal nodes structure instead of
  hashes for savings on memory and lookup speed.

+ MaxBytes now more accurate with recursive length calculations
  on reference keys & values, and added estimates of 240 bytes
  per key/value pair, + 16 bytes per reference found, in addition
  to the length of the data being stored.

  A MaxBytes setting of 1000000 would then try to really limit
  total memory consumption of the entire cache to 1M.  This is
  relevant when being used in high process environments like mod_perl
  where memory savings are critical.

+ MaxSize has default of MaxBytes/10, so large cache entries don't
  purge many others.  If cache entry exceeds MaxSize in bytes, then
  that value won't be cached.

$MODULE = "Tie::Cache"; $VERSION = .10; $DATE = '11/22/00';

- Allow for undef values to be stored like $cache{1} = undef
  Really doesn't affect cache, but got rid off error message
  in this case.

$MODULE = "Tie::Cache"; $VERSION = .09; $DATE = 'TBA';

+ Added benchmark section comparing Tie::Cache & Tie::Cache::LRU

$MODULE = "Tie::Cache"; $VERSION = .08; $DATE = '12/14/99';

- FETCH, or %cache reads like $cache{key} would returned
  a defined value, null, when it should have been undefined.
  This would breaks tests that test for defined($cache{$key}),