@@ -1,0 +1,4 @@
+~$
+blib
+Tie-Cache
+Makefile(\.old)?$
