@@ -1,0 +1,8 @@
+CHANGES
+Cache.pm
+MANIFEST
+MANIFEST.SKIP
+MANIFEST.bak
+Makefile.PL
+README
+test.pl
